--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,17 @@
         app:srcCompat="@drawable/map4" />
 
     <ImageButton
+        android:id="@+id/cobraButton"
+        android:layout_width="68dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="228dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cobrav2" />
+
+    <ImageButton
         android:id="@+id/bankjesButton"
         android:layout_width="209dp"
         android:layout_height="143dp"
@@ -37,9 +48,9 @@
 
     <ImageButton
         android:id="@+id/jonkheerButton"
-        android:layout_width="68dp"
-        android:layout_height="71dp"
-        android:layout_marginTop="92dp"
+        android:layout_width="72dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="84dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
