Fixed a few minor flaws: Made the text black so its better readable Buttons now all have a 2nd image when pressed "Toon korste wachtrij" button is moved so the j is better visible Fixed some inconsistencies with capitalization

--- a/app/src/main/res/layout/activity_jonkheer_attractie.xml
+++ b/app/src/main/res/layout/activity_jonkheer_attractie.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/allerta"
         android:text="Jonkheer 1897"
-        android:textColor="#CC95B6"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_marginBottom="11dp"
         android:fontFamily="@font/allerta"
         android:text="Jonkheer 1897 is een stalen duikachtbaan, gesitueerd in een zilvermijn in Zuid-Limburg. Het zilver wordt bewaakt door Golden Girls, maar de Jonkheer wil het stelen! Aan wiens kant staat jij? Deze attractie staat in het Stoerland van de Essteling en vertoont veel overeenkomsten met de attractie 'Baron 1898' van een ander pretpark."
-        android:textColor="#FF949f"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/backButton"
