--- a/app/src/main/res/layout/activity_kortste_wachtrij.xml
+++ b/app/src/main/res/layout/activity_kortste_wachtrij.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/allerta"
         android:text="Kortste Wachtrij:"
-        android:textColor="#CC95B6"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
         android:layout_marginRight="56dp"
         android:fontFamily="@font/allerta"
         android:text="De Cobra"
-        android:textColor="#FF949F"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +76,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="@font/allerta"
         android:text="Jonkheer"
-        android:textColor="#FF949F"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
