--- a/app/src/main/res/layout/activity_wachtrijen.xml
+++ b/app/src/main/res/layout/activity_wachtrijen.xml
@@ -28,7 +28,7 @@
         android:layout_marginRight="276dp"
         android:fontFamily="@font/allerta"
         android:text="2 minuten"
-        android:textColor="#CC95B6"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,7 @@
         android:layout_marginRight="260dp"
         android:fontFamily="@font/allerta"
         android:text="Jonkheer"
-        android:textColor="#FF949F"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
         android:layout_marginRight="52dp"
         android:fontFamily="@font/allerta"
         android:text="27 minuten"
-        android:textColor="#CC95B6"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +84,7 @@
         android:layout_marginRight="56dp"
         android:fontFamily="@font/allerta"
         android:text="De Cobra"
-        android:textColor="#FF949F"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/allerta"
         android:text="Overzicht wachtrijen"
-        android:textColor="#CC95B6"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
