--- a/app/src/main/res/layout/activity_cobra_attractie.xml
+++ b/app/src/main/res/layout/activity_cobra_attractie.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/allerta"
         android:text="De Cobra"
-        android:textColor="#CC95B6"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_marginBottom="11dp"
         android:fontFamily="@font/allerta"
         android:text="De Cobra is een klassieke achtbaan en was ooit de eerste stalen achtbaan in de Essteling. En nog steeds populair door de snelheid en de loopings. Hij doet je sterk denken aan de 'Python' uit een ander pretpark.  "
-        android:textColor="#FF949f"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/backButton"
